<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_settings"/>
    
     <item
        android:id="@+id/menu_news"
        android:title="@string/news"
        app:showAsAction="never"
        android:orderInCategory="30"/>
    <item
        android:id="@+id/menu_clear_shoot"
        android:title="@string/clear_shoot"
        app:showAsAction="never"
        android:orderInCategory="20"/>
    <item
        android:id="@+id/menu_archive"
        android:title="@string/view_archive"
        app:showAsAction="never"
        android:orderInCategory="10"/>
    <item
        android:id="@+id/menu_help"
        android:title="@string/help"
        app:showAsAction="never"
        android:orderInCategory="80"/>
    
    <item
        android:id="@+id/menu_bkg"
        android:title="@string/change_background"
        app:showAsAction="never"
        android:orderInCategory="90"/>
<!-- TEST for non cloud flavors -->
    <item
        android:id="@+id/menu_cloud"
        android:title="Cloud"
        app:showAsAction="never"
        android:orderInCategory="100"/>
    
</menu>

